--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -16,7 +16,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: | 
-          python -m pip install --upgrade pip wheel
-          pip install -r requirements.txt
-
+        run: |
+          make install
+      - name: Lint with pylint
+        run: |
+          make lint
+      - name: Format code
+        run: |
+          make format
