--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -14,12 +14,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install dependencies
+        run: | 
+          python -m pip install --upgrade pip wheel
+          pip install -r requirements.txt
+      - name: Lint with flake8
         run: |
-          make install
-      - name: Lint with pylint
-        run: |
-          make lint
-      - name: Format code
-        run: |
-          make format
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run unit tests with nose
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=service
