--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -19,6 +19,8 @@ jobs:
         run: | 
           python -m pip install --upgrade pip wheel
           pip install -r requirements.txt
+      - name: Format
+        run: black *.py
       - name: Lint with flake8
         run: |
           flake8 lab --count --select=E9,F63,F7,F82 --show-source --statistics
