--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -20,7 +20,7 @@ jobs:
           python -m pip install --upgrade pip wheel
           pip install -r requirements.txt
       - name: Format
-        run: black *.py
+        run: black
       - name: Lint with flake8
         run: |
           flake8 lab --count --select=E9,F63,F7,F82 --show-source --statistics
